// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No options - spec 1`] = `
<div
  className="pe-notification pe-dark-tone  pe-notification--horizontal   "
  onClick={[Function]}
>
  <div
    className="pe-notification__content"
  />
</div>
`;

exports[`Option: class - spec 1`] = `
<div
  className="pe-notification pe-dark-tone  pe-notification--horizontal   class-x"
  onClick={[Function]}
>
  <div
    className="pe-notification__content"
  />
</div>
`;

exports[`Option: className - spec 1`] = `
<div
  className="pe-notification pe-dark-tone  pe-notification--horizontal   className-x"
  onClick={[Function]}
>
  <div
    className="pe-notification__content"
  />
</div>
`;

exports[`Option: element - spec 1`] = `
<a
  className="pe-notification pe-dark-tone  pe-notification--horizontal   "
  onClick={[Function]}
>
  <div
    className="pe-notification__content"
  />
</a>
`;

exports[`Option: id - spec 1`] = `
<div
  className="pe-notification pe-dark-tone  pe-notification--horizontal   "
  id="id-x"
  onClick={[Function]}
>
  <div
    className="pe-notification__content"
  />
</div>
`;
